--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -39,6 +39,11 @@
         </a>
       </div>
     </div>
+    <div class="row">
+      <div class="container">
+        <p>©Apatan {{ now.Format "2006"}}</p>
+      </div>
+    </div>
   </div>
 </footer>
 
