--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <a href="#counter" class="site-hero-scroll scroll-to">
+    <a href="{{ .arrowlink }}" class="site-hero-scroll scroll-to">
       <img src="images/arrow-down.svg" alt="arrow-down">
     </a>
   </section>
