add ep gig - recoloring

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,9 +1,9 @@
 //site color variables
-$body-color: rgba(102,17,0, .4);
-$primary-color: #B22222;
-$secondary-color: #C9694F;
-$text-color: #3F4543;
-$text-color-dark: #3e0000;
+$body-color: #f2dac5;
+$primary-color: #b6571c;
+$secondary-color: #6e2e0d;
+$text-color: #46210b;
+$text-color-dark: #17110b;
 $site-ease: cubic-bezier(0.36, 0.03, 0, 0.91);
 $gray: #F7F9FF;
 $dark-gray: #646569;
