--- a/layouts/partials/gigs.html
+++ b/layouts/partials/gigs.html
@@ -28,7 +28,7 @@
               <h3>{{ .name }}</h3>
               <p>{{ .location }} - <i>{{ .kind }}</i></p>
               {{ if isset . "time" }}
-              <span style="position: absolute; top: 45px; right: 50px;"><b>{{ .time }} Uhr</b></span>
+              <span style="position: absolute; top: 45px; right: 50px;"><b>{{ .time }}</b></span>
               {{ end }}
             </div>
           </article>
