rm sidebug mobile

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -1,3 +1,10 @@
+html, body {
+    overflow-x: hidden;
+}
+body {
+    position: relative;
+}
+
 .site-hero {
     .mx-auto {
         padding: 4rem 0;
