--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="site-footer-logo"><a href="{{ .Site.BaseURL }}"><img src="{{ "images/logo-footer.png" | absURL }}" alt="logo-footer"></a></div>
+        <div class="site-footer-logo"><a href="{{ .Site.BaseURL }}"><img src="{{ "/images/logo-footer.png" | absURL }}" alt="logo-footer"></a></div>
       </div>
       {{ with .Site.Params.footer.service }}
       <div class="col-lg-3 col-md-6">
@@ -30,7 +30,7 @@
 
       <div class="offset-lg-5 col-lg-1 col-md-1 col-12">
         <a href="#top" class="site-footer-widget-top">
-          <img src="{{ "images/to-top.svg" | absURL }}" alt="back-to-top">
+          <img src="{{ "/images/to-top.svg" | absURL }}" alt="back-to-top">
           <p>
             Nach
             <br>
