--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <a href="{{ .arrowlink }}" class="site-hero-scroll scroll-to">
-      <img src="images/arrow-down.svg" alt="arrow-down">
+      <img src="/images/arrow-down.svg" alt="arrow-down">
     </a>
   </section>
   {{ "<!-- Site Hero End -->" | safeHTML }}
