--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <div class="site-hero-content text-center">
-            <img src="images/logo-white.png" alt="logo-white">
+            <img src="/images/logo-white.png" alt="logo-white">
             <ul class="site-hero-content-buttons">
               <li>
                 <a href="{{ .primary_button_url }}" class="btn btn-secondary">
