add ep and youtube videos

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -17,8 +17,18 @@
       </div>
     </div>
   </div>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 text-center">
+      <iframe height="450" style="width:100%;overflow:hidden;background:transparent;" src="https://www.youtube.com/embed/S-xse9jsb8I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="col-md-6 text-center">
+      <iframe height="450" style="width:100%;overflow:hidden;background:transparent;" src="https://www.youtube.com/embed/xOLByp8T24o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
 </section>
-
 <section class="site-expertise">
   <div class="container">
     <div class="row">
