--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -18,6 +18,15 @@
                 </a>
               </li>
               <li>
+                <a href="{{ .middle_button_url }}" class="btn btn-primary" style="background-color: #213e53;">
+                  <span class="btn-area">
+                    <span data-text="{{ .middle_button }}">
+                      {{ .middle_button }}
+                    </span>
+                  </span>
+                </a>
+              </li>
+              <li>
                 <a href="{{ .secondary_button_url }}" class="btn btn-primary">
                   <span class="btn-area">
                     <span data-text="{{ .secondary_button }}">
