fixed contact links

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -9,13 +9,13 @@
             href="mailto:{{ .email }}">{{ .email }}</a></p>
         <br>
         <p><img class="icon-img" src="/images/icons/contact/png/030-telephone.png" alt="icon"><a
-            href="mailto:{{ .phone }}">{{ .phone }}</a></p>
+            href="tel:{{ .phone }}">{{ .phone }}</a></p>
         <br>
         <p><img class="icon-img" src="/images/icons/social/png/021-facebook.png" alt="icon"><a
-            href="mailto:{{ .phone }}">{{ .facebook }}</a></p>
+            href="{{ .facebook }}">{{ .facebook }}</a></p>
         <br>
         <p><img class="icon-img" src="/images/icons/social/png/025-instagram.png" alt="icon"><a
-            href="mailto:{{ .phone }}">{{ .instagram }}</a></p>
+            href="{{ .instagram }}">{{ .instagram }}</a></p>
 
 
       </div>
