add target blank on contact links

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -12,10 +12,10 @@
             href="tel:{{ .phone }}">{{ .phone }}</a></p>
         <br>
         <p><img class="icon-img" src="/images/icons/social/png/021-facebook.png" alt="icon"><a
-            href="{{ .facebook }}">{{ .facebook }}</a></p>
+            href="{{ .facebook }}" target="_blank">{{ .facebook }}</a></p>
         <br>
         <p><img class="icon-img" src="/images/icons/social/png/025-instagram.png" alt="icon"><a
-            href="{{ .instagram }}">{{ .instagram }}</a></p>
+            href="{{ .instagram }}" target="_blank">{{ .instagram }}</a></p>
 
 
       </div>
