add reload img functionality

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -5,7 +5,7 @@
         <div class="site-about-wrapper">
           <div class="site-about-company">
             <div>
-              <img src="{{ .Site.Params.about.image }}" alt="image" style="width: 100%">
+              <img src="" data-reloadsrc="{{ .Site.Params.about.image }}" alt="image" style="width: 100%">
             </div>
           </div>
           <div class="site-about-description">
