--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="site-footer-logo"><a href="{{ .Site.BaseURL }}"><img src="{{ "/images/logo-footer.png" | absURL }}" alt="logo-footer"></a></div>
+        <div class="site-footer-logo"><a href="{{ .Site.BaseURL }}"><img src="" data-reloadsrc="{{ "/images/logo-footer.png" | absURL }}" alt="logo-footer"></a></div>
       </div>
       {{ with .Site.Params.footer.service }}
       <div class="col-lg-3 col-md-6">
