--- a/layouts/partials/incontrast.html
+++ b/layouts/partials/incontrast.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="site-about-company" style="background-color: #213e53;">
                         <div>
-                        <img src="{{ .cover }}" alt="image" style="width: 100%">
+                        <img src="" data-reloadsrc="{{ .cover }}" alt="image" style="width: 100%">
                         </div>
                     </div>
                 </div>
