--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -14,7 +14,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="site-team-member">
             <div class="site-team-member-image">
-              <img src="{{ .icon | absURL }}" alt="team-member-icon">
+              <img src="" data-reloadsrc="{{ .icon | absURL }}" alt="team-member-icon">
             </div>
             <div class="site-team-member-content">
               <div class="row">
@@ -23,7 +23,7 @@
                   <p>{{ .designation }}</p>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                  <img class="team-img" src="{{ .image | absURL }}" alt="team member">
+                  <img class="team-img" src="" data-reloadsrc="{{ .image | absURL }}" alt="team member">
                 </div>
               </div>
             </div>
