load iframes after DOM builded

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -20,11 +20,9 @@
 <br>
 <div class="container">
   <div class="row">
-    <div class="col-md-6 text-center">
-      <iframe height="450" style="width:100%;overflow:hidden;background:transparent;" src="https://www.youtube.com/embed/S-xse9jsb8I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="col-md-6 text-center" data-youtubeid="S-xse9jsb8I">
     </div>
-    <div class="col-md-6 text-center">
-      <iframe height="450" style="width:100%;overflow:hidden;background:transparent;" src="https://www.youtube.com/embed/xOLByp8T24o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="col-md-6 text-center" data-youtubeid="xOLByp8T24o">
     </div>
   </div>
 </div>
