--- a/layouts/partials/incontrast.html
+++ b/layouts/partials/incontrast.html
@@ -47,8 +47,7 @@
         </div>
         <br />
         <div class="row">
-            <div class="col-12">
-                <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450" style="width:100%;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/ch/album/in-contrast-ep/1538748382"></iframe>
+            <div class="col-12" id="applemusic-wrapper">
             </div>
         </div>
     </div>
